--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+.passwordBox {
+  width: 300px;
+  height: 300px;
+  padding: 20px;
+  text-align: center;
+  background-color: rgb(213, 189, 151);
+  border-radius: 10px;
+}
+.passwordBox h2 {
+  font-family: "Times New Roman", Times, serif !important;
+  font-style: italic;
+  font-size: x-large;
+}
+.passwordBoxin {
+  display: flex;
+}
+.passwordBoxin input {
+  flex-basis: 80%;
+  border-radius: 5px;
+  border: none;
+}
+.passwordBoxin button {
+  flex-basis: 20%;
+  cursor: pointer;
+  padding: 5px 0px;
+  border-radius: 5px;
+  border: none;
+  margin-left: 2px;
+}
+.passLength {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.passLength input {
+  border-radius: 5px;
+  border: none;
+  padding: 2px;
+  width: 56px;
+}
+.btn{
+  background-color: rgb(48, 44, 34);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border: none;
+  padding: 10px ;
+  cursor: pointer;
+  border-radius: 5px;
+  margin: 20px;
 }
